--- a/index.html
+++ b/index.html
@@ -1,15 +1,113 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
+    <meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>WHITEDAVIL | OS v10.3</title><link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=VT323&display=swap" rel="stylesheet"><style>
+    :root{--n-red:#f00;--bg:#fff;--txt:#000;--glass:rgba(255,255,255,0.01);--brd:rgba(0,0,0,0.15);--btn-bg:rgba(0,0,0,0.05);}
+    body.dark{--bg:#000;--txt:#fff;--glass:rgba(0,0,0,0.01);--brd:rgba(255,255,255,0.2);--btn-bg:rgba(255,255,255,0.08);}
+    html{scroll-behavior:smooth;}
+    *{-webkit-font-smoothing:antialiased;margin:0;padding:0;box-sizing:border-box;}
+    body{font-family:'Inter',sans-serif;background:var(--bg);color:var(--txt);overflow-x:hidden;transition:background 0.5s;}
+    #bgCanvas{position:fixed;top:0;left:0;z-index:-1;}
 
-<body>
-  <script src="script.js"></script>
+    /* RIPPLE EFFECT */
+    .ripple{position:fixed;border:2px solid var(--n-red);border-radius:50%;pointer-events:none;transform:translate(-50%,-50%);animation:rippleEffect 0.6s cubic-bezier(0,0,0.2,1) forwards;z-index:9999;}
+    @keyframes rippleEffect{from{width:0;height:0;opacity:0.8;}to{width:150px;height:150px;opacity:0;}}
+    #progress-bar{position:fixed;top:0;left:0;height:3px;background:var(--n-red);width:0%;z-index:10000;transition:width 0.1s;}
+
+    /* BOUNCE REVEAL */
+    .reveal{opacity:0;transform:translateY(60px) scale(0.9);transition:all 1s cubic-bezier(0.175,0.885,0.32,1.275);}
+    .reveal.active{opacity:1;transform:translateY(0) scale(1);}
+
+    .container{max-width:700px;margin:0 auto;padding:120px 20px 80px 20px;display:flex;flex-direction:column;gap:40px;}
+    
+    /* CRYSTAL GLASS */
+    .card{background:var(--glass);backdrop-filter:blur(40px) saturate(200%);-webkit-backdrop-filter:blur(40px);border:1.5px solid var(--brd);border-radius:44px;padding:40px;position:relative;transition:transform 0.5s cubic-bezier(0.175,0.885,0.32,1.275),border-color 0.3s;}
+    .card:hover{transform:scale(1.02) translateY(-8px);border-color:var(--n-red);}
+    
+    .ai-brand{font-size:4.5rem;color:var(--n-red);display:block;margin-bottom:10px;letter-spacing:-4px;line-height:1;font-weight:700;}
+    .dot-matrix{font-family:'VT323',monospace;text-transform:uppercase;letter-spacing:1px;}
+    .tag{background:var(--txt);color:var(--bg);padding:6px 16px;font-size:0.75rem;border-radius:20px;display:inline-block;margin-bottom:20px;}
+
+    .command-bar{display:flex;background:var(--btn-bg);border:2px solid var(--txt);border-radius:24px;overflow:hidden;padding:5px;margin-top:20px;}
+    input#ai-query{flex-grow:1;padding:18px;border:none;background:transparent;color:inherit;outline:none;font-size:1.1rem;}
+    .enter-btn{background:var(--txt);color:var(--bg);padding:0 30px;border-radius:18px;border:none;cursor:pointer;font-family:'VT323',monospace;font-size:1.2rem;}
+
+    /* LINK BOXES UPDATED */
+    .social-grid{display:grid;grid-template-columns:1fr 1fr;gap:15px;margin-top:10px;}
+    .social-btn{display:flex;flex-direction:column;align-items:center;padding:25px;border:1.5px solid var(--txt);border-radius:32px;text-decoration:none;color:var(--txt);background:var(--btn-bg);transition:0.4s;}
+    .social-btn:hover{background:var(--txt);color:var(--bg);transform:translateY(-5px);}
+
+    #live-clock{position:fixed;top:20px;left:50%;transform:translateX(-50%);background:var(--txt);color:var(--bg);padding:8px 30px;border-radius:30px;z-index:1001;font-size:1.3rem;}
+    #theme-toggle{position:fixed;bottom:30px;right:30px;padding:15px 30px;background:var(--txt);color:var(--bg);border-radius:50px;cursor:pointer;z-index:1002;}
+</style></head>
+<body class="dark" onclick="createRipple(event)">
+    <div id="progress-bar"></div>
+    <div id="live-clock" class="dot-matrix">00:00:00</div>
+    <canvas id="bgCanvas"></canvas>
+    <div id="theme-toggle" class="dot-matrix" onclick="document.body.classList.toggle('dark')">THEME_SWAP</div>
+
+    <div class="container">
+        <div class="card reveal">
+            <span class="tag dot-matrix">WHITEDAVIL_INTELLIGENCE</span>
+            <span id="v-toggle" class="dot-matrix" style="cursor:pointer;color:var(--n-red);margin-left:10px;" onclick="vMode=!vMode;this.innerText=vMode?'VOICE: ON':'VOICE: OFF'">VOICE: ON</span>
+            <h2 class="dot-matrix ai-brand">WHITEDAVIL</h2>
+            <div class="command-bar">
+                <input type="text" id="ai-query" placeholder="Enter WHITEDAVIL Command..." onkeypress="if(event.key==='Enter')runAI()">
+                <button class="enter-btn" onclick="runAI()">ENTER</button>
+            </div>
+            <div id="ai-response" class="dot-matrix" style="margin-top:20px;padding:20px;background:rgba(255,255,255,0.05);border-radius:18px;display:none;border-left:4px solid var(--n-red);line-height:1.6;"></div>
+        </div>
+
+        <div class="card reveal">
+            <span class="tag dot-matrix">DIGITAL_NODES</span>
+            <div class="social-grid">
+                <a href="https://youtube.com/@whitedavilartist" target="_blank" class="social-btn"><strong class="dot-matrix">YOUTUBE</strong></a>
+                <a href="https://www.instagram.com/whitedevilart_?igsh=YTE5c2s4NTU5MWE0" target="_blank" class="social-btn"><strong class="dot-matrix">INSTAGRAM</strong></a>
+            </div>
+        </div>
+
+        <div class="card reveal">
+            <span class="tag dot-matrix">DEVELOPER_ID</span>
+            <div style="margin-top:10px;">
+                <p style="font-size: 1.5rem; font-weight: bold;">Nitish Kumar</p>
+                <p class="dot-matrix" style="color: var(--n-red); font-weight: 700;">WHITEDAVIL_OS_v10.3</p>
+            </div>
+        </div>
+    </div>
+
+<script>
+    let vMode = true;
+    const API_KEY = "AIzaSyCWAcnkgCyG6Ec0qqnmuKdkS3OTk_qwwc4";
+    const API_URL = "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent";
+    let history = [];
+
+    const obs = new IntersectionObserver((es)=>{es.forEach(e=>{if(e.isIntersecting)e.target.classList.add('active')})},{threshold:0.1});
+    document.querySelectorAll('.reveal').forEach(el=>obs.observe(el));
+
+    function createRipple(e){const r=document.createElement("div");r.className="ripple";r.style.left=`${e.clientX}px`;r.style.top=`${e.clientY}px`;document.body.appendChild(r);setTimeout(()=>r.remove(),600);}
+    window.onscroll=()=>{const s=document.documentElement.scrollTop,h=document.documentElement.scrollHeight-document.documentElement.clientHeight;document.getElementById("progress-bar").style.width=(s/h)*100+"%";};
+
+    async function runAI(){
+        const q=document.getElementById('ai-query').value.trim(),r=document.getElementById('ai-response');
+        if(!q) return; r.style.display="block"; r.innerHTML="> ACCESSING_WHITEDAVIL_CORE...";
+        try{
+            history.push({role:"user",parts:[{text:q}]});
+            const res = await fetch(`${API_URL}?key=${API_KEY}`,{method:"POST",headers:{"Content-Type":"application/json"},body:JSON.stringify({contents:history})});
+            const d = await res.json();
+            if(d.error) throw new Error(d.error.message);
+            const ans = d.candidates[0].content.parts[0].text;
+            history.push({role:"model",parts:[{text:ans}]});
+            if(vMode){window.speechSynthesis.cancel();const u=new SpeechSynthesisUtterance(ans);u.pitch=0.9;window.speechSynthesis.speak(u);}
+            let i=0; r.innerHTML="> ";
+            const type=()=>{if(i<ans.length){r.innerHTML+=ans.charAt(i);i++;setTimeout(type,10);}}; type();
+        }catch(e){r.innerHTML=`> ERROR: ${e.message||"CONNECTION_FAILED"}`;}
+    }
+
+    const bg=document.getElementById('bgCanvas'),bctx=bg.getContext('2d');let dots=[];
+    function init(){bg.width=window.innerWidth;bg.height=window.innerHeight;dots=[];for(let x=0;x<bg.width;x+=35)for(let y=0;y<bg.height;y+=35)dots.push({x,y});}
+    let m={x:-1000,y:-1000};window.onmousemove=e=>{m.x=e.clientX;m.y=e.clientY;};
+    function anim(){bctx.clearRect(0,0,bg.width,bg.height);dots.forEach(d=>{let dist=Math.hypot(m.x-d.x,m.y-d.y);let dark=document.body.classList.contains('dark');bctx.fillStyle=dist<150?(dark?'#fff':'#000'):(dark?'rgba(255,255,255,0.3)':'rgba(0,0,0,0.3)');bctx.beginPath();bctx.arc(d.x,d.y,dist<150?3:1.2,0,Math.PI*2);bctx.fill();});requestAnimationFrame(anim);}
+    init();anim();window.onresize=init;setInterval(()=>{document.getElementById('live-clock').innerText=new Date().toLocaleTimeString('en-GB',{hour12:false});},1000);
+</script>
 </body>
-
 </html>
